# MIAGK

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  PixelBuffer.cpp  PixelBuffer.h  TGAWriter.cpp  TGAWriter.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  VertexProcessor.cpp  VertexProcessor.h  main.cpp  tex.tga  tex2.tga  tex3.tga
Light/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
Math/: Vector3.cpp  Vector3.h  float3.cpp  float3.h  float4.cpp  float4.h  float4x4.cpp  float4x4.h  int3.cpp  int3.h
Meshes/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Mesh.cpp  Mesh.h  Torus.cpp  Torus.h  VertexProcessor.cpp  VertexProcessor.h
